RESOLVED FIXED 259814
InputDevice capabilities are not required until capture is active
https://bugs.webkit.org/show_bug.cgi?id=259814
Summary InputDevice capabilities are not required until capture is active
Eric Carlson
Reported 2023-08-03 20:18:45 PDT
InputDevice capabilities are not exposed until after the user has given consent to capture, so don't bother asking for them unless they will be revealed.
Attachments
Eric Carlson
Comment 1 2023-08-03 20:19:28 PDT
Eric Carlson
Comment 2 2023-08-03 20:24:29 PDT
EWS
Comment 3 2023-08-04 07:28:42 PDT
Committed 266581@main (a41543cba4bf): <https://commits.webkit.org/266581@main> Reviewed commits have been landed. Closing PR #16380 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.