Cherry-pick a41543cba4bf. rdar://problem/113271473

InputDevice capabilities are not required until capture is active
    https://bugs.webkit.org/show_bug.cgi?id=259814
    rdar://113271473

    Reviewed by Jer Noble.

    InputDevice capabilities are not exposed until after the user has given consent to
    capture, so don't bother asking for them unless they will be revealed as activating the
    AVAudioSession may change the characteristics of the audio rendering in other processes.

    * Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
    (WebKit::UserMediaPermissionRequestManagerProxy::platformGetMediaStreamDevices):

    Canonical link: https://commits.webkit.org/266581@main

Identifier: 265870.299@safari-7616.1.27.10-branch